# tecparking

./: .gitignore  PARKING-SOLVER-PLAN.md  README.md
parking-solver/: README.md  pyproject.toml  redeploy.ps1
parking-solver/bridges/grasshopper/: parking_solver_bridge.py
parking-solver/bridges/revit/: parking_importer.py
parking-solver/parking_solver/: __main__.py
parking-solver/parking_solver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
parking-solver/parking_solver/app/: controller.py  workers.py
parking-solver/parking_solver/core/: ada_placement.py  generator.py  model.py  optimizer.py  scorer.py  selection.py
parking-solver/parking_solver/core/geometry/: helpers.py
parking-solver/parking_solver/core/regulations/: engine.py
parking-solver/parking_solver/core/regulations/profiles/: bulgarian.yaml  generic_eu.yaml
parking-solver/parking_solver/io/: export_3dm.py  export_dxf.py  export_ifc.py  export_pdf.py  import_dwg.py  import_dxf.py  import_pdf.py  osm.py  project_io.py
parking-solver/parking_solver/ui/: canvas.py  dashboard_panel.py  explore_panel.py  main_window.py  params_panel.py
parking-solver/parking_solver/ui/pareto/: pareto_panel.py
parking-solver/tests/: test_circuit.py  test_compliance.py  test_dxf_roundtrip.py  test_entrances.py  test_flow_metrics.py  test_generator.py  test_optimizer.py  test_phase2.py  test_phase4.py  test_polygon_validation.py  test_profile.py  test_project_roundtrip.py  test_selection.py  test_subdivision.py  test_ui_smoke.py
